# de-zoomcamp

./: .gitignore  README.md  learnings_2026-01-18.txt  pyproject.toml
Module_1/Homework_1/: Dockerfile  README.md  docker-compose.yaml  ingest_to_db.py  pyproject.toml  queries.sql
Module_1/Homework_1/terraform/: main.tf
Module_1/practice/learning_logs/: learnings_2026-01-20.txt  learnings_2026-01-22.txt  learnings_2026-01-23.txt  learnings_2026-01-24.txt
Module_1/practice/pipeline/: Dockerfile  docker-compose.yaml  pipeline.py  pyproject.toml
Module_1/practice/terraform/: variables.tf
Module_2/Homework_2/: README.md
Module_2/practice/: docker-compose.yaml
Module_2/practice/learning_logs/: learnings_2026-01-25.txt  learnings_2026-01-27.txt  learnings_2026-01-29.txt
Module_3/Homework_3/: Homework_3.sql  README.md
Module_3/practice/airflow/: docker-compose.yaml
Module_3/practice/learning_logs/: learnings_2026-02-05.txt  learnings_2026-02-08.txt
Module_4/Homework/: README.md
Module_4/practice/learning_logs/: learnings_2026-02-15.txt  learnings_2026-02-16.txt
Module_4/practice/ny_taxi_project/: dbt_project.yml
Module_5/Homework/: README.md
Module_5/my-taxi-pipeline/pipeline/: pipeline.yml
Module_6/Homework/: README.md
Module_6/practice/: download_data.sh
Module_6/practice/terraform/: main.tf  (+1 more)
Workshops/dlt/: open_library_pipeline.py
learning_logs/: learnings_2026-01-18.txt  learnings_2026-01-19.txt  learnings_2026-01-21.txt
pipeline/: Dockerfile  ingest_data.py  output_10.parquet  output_12.parquet  pyproject.toml
terraform/: main.tf
(+24 files in other folders)
