[project]
name = "de-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.7",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-storage>=3.9.0",
    "ipykernel>=7.1.0",
    "ipython>=9.10.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
]
